--- a/styles/section2.css
+++ b/styles/section2.css
@@ -1,33 +1,33 @@
 #first {
-  background-image: url(/images/image10.jpg);
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2021/01/1-copy-39-796x417.jpg");
 }
 
 #second {
-  background-image: url(/images/image11.jpeg);
+  background-image: url("https://i.ytimg.com/vi/NpSrHZnCi-A/hqdefault.jpg");
 }
 
 #third {
-  background-image: url(/images/image9.jpeg);
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2021/01/Untitled-design-2021-01-22T103446.744-516x270.png");
 }
 
 #fourth {
-  background-image: url(/images/image5.jpg);
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2021/01/1-copy-38-516x270.jpg");
 }
 
 #fifth {
-  background-image: url(/images/image24.jpg);
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2021/01/low-traffic-neighborhood-car-ev-electric-future-city-safety-road-urbanism-480x270.png");
 }
 
 #six {
-  background-image: url(/images/image4.jpg);
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/12/open-source-code-gq-368x276.png");
 }
 
 #seven {
-  background-image: url(/images/image16.jpeg);
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2021/01/KEF-KC62.jpg");
 }
 
 #eight {
-  background-image: url(/images/image30.jpeg);
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2021/01/bloodlines.jpg");
 }
 
 .image {
